# test-vectors

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: fnargs.rs  lib.rs  listdir.rs  params.rs  transform.rs
macro/src/listdir/: tests.rs
macro/src/params/: tests.rs
macro/tests/: basic.rs
macro/tests/basic/alpha/: expected
macro/tests/basic/beta/: expected
src/: error.rs  fnargs.rs  lib.rs  listdir.rs  params.rs  transform.rs
src/params/: tests.rs
test-vectors/: Cargo.toml  test-data
test-vectors/src/: lib.rs  utf8str.rs
test-vectors/test-data/: example1
test-vectors/test-data/example2/single_case/: elided  underscores
tests/: basic.rs
tests/basic/beta/: input
