[package]
name = "test-vectors"
version = "0.1.0"
edition = "2021"
description = "Execute tests against test vectors stored in external files"
license-file = "LICENSE"
repository = "https://github.com/nathan-at-least/test-vectors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.test-vectors-macro]
path = "../macro"
version = "^0.1.0"

[dev-dependencies]
serde_json = "1.0.87"

[dev-dependencies.serde]
version = "1.0.147"
features = [
  "derive"
]
